--- a/style.css
+++ b/style.css
@@ -16,11 +16,11 @@
 }
 
 #about {
-      background-color: #FFFF4D;
+      background-color: #ffff4d;
 }
 
 #project {
-      background-color: #1E90FF;
+      background-color: #1e90ff;
 }
 
 #contact {
@@ -52,5 +52,97 @@ section {
 
 #gallery .row>* {
       padding: 0;
+}
+
+.laptop-box {
+      position: relative;
+      background: linear-gradient(135deg, #ff6ec4, #7873f5, #1fd1f9);
+      animation: gradientShift 8s ease infinite;
+      box-shadow: 0 15px 30px rgba(0, 0, 0, 0.4);
+      border-radius: 10px;
+      height: 500px;
+      transform-style: preserve-3d;
+}
+
+.laptop-box::before {
+      content: "MY";
+      position: absolute;
+      color: #fff;
+      font-size: 6em;
+      font-weight: bold;
+      font-style: italic;
+      top: 30px;
+      left: 50%;
+      transform: translate(-50%, 0);
+      opacity: 0;
+      transition: 0.5s;
+}
+
+.laptop-box:hover::before {
+      opacity: 0.2;
+}
+
+.laptop-box::after {
+      content: "LAPTOP";
+      position: absolute;
+      color: #fff;
+      font-size: 4.3em;
+      font-weight: bold;
+      font-style: italic;
+      top: 350px;
+      left: 50%;
+      transform: translate(-50%, 0);
+
+      opacity: 0;
+      transition: 0.5s;
+}
+
+.laptop-box:hover::after {
+      opacity: 0.2;
+}
+
+.laptop-name {
+      position: absolute;
+      top: 0;
+      width: 100%;
+      color: #fff;
+      text-align: center;
+      font-size: 2em;
+      opacity: 0;
+      transition: 0.5s;
+      transform: translate3d(0, 0, 50px);
+}
+
+.laptop-box:hover .laptop-name {
+      top: 20px;
+      opacity: 1;
+}
+
+.laptop-detail-button {
+      position: absolute;
+      bottom: 0;
+      left: 50%;
+      transform: translate3d(-50%, 0, 50px);
+      opacity: 0;
+      transition: 0.5;
+}
+
+.laptop-box:hover .laptop-detail-button {
+      opacity: 1;
+      bottom: 20px;
+}
+
+.laptop-img {
+      position: absolute;
+      top: 58%;
+      left: 46%;
+      transform: translate3d(-50%, -58%, 100px);
+      max-width: 400px;
+      transition: 0.5s;
+}
+
+.laptop-box:hover .laptop-img {
+      transform: translate3d(-50%, -58%, 100px) rotate(5deg) scale(1.2);
+      z-index: 1;
 }
 
